<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favorites_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.favorite.FavoritesFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filters_chip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/big_spacing"
        android:layout_marginTop="@dimen/double_spacing"
        app:checkedChip="@id/filters_all_chip"
        app:chipSpacingHorizontal="@dimen/medium_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/filters_all_chip"
            style="@style/ChipGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/all"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filters_movies_chip"
            style="@style/ChipGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/movies"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filters_shows_chip"
            style="@style/ChipGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/shows"
            app:checkedIconVisible="false" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/double_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/filters_chip"
        app:layout_constraintStart_toStartOf="@id/filters_chip"
        app:layout_constraintTop_toBottomOf="@id/filters_chip">

        <com.homindolentrahar.misbar.ui.core.NestedScrollableHost
            android:id="@+id/rv_favorites_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_favorites"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="20"
                tools:listitem="@layout/favorites_list_item" />

        </com.homindolentrahar.misbar.ui.core.NestedScrollableHost>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/not_found_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_not_found"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_not_found" />

            <TextView
                style="@style/Subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:text="@string/not_found"
                app:layout_constraintEnd_toEndOf="@id/img_not_found"
                app:layout_constraintStart_toStartOf="@id/img_not_found"
                app:layout_constraintTop_toBottomOf="@id/img_not_found" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/loading_animation"
            layout="@layout/loading_animation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>