...
                android:text="@{item.description}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                tools:text="The Gun, the Punch, and the Blood. Seems pretty normal" />

            <Button
                android:id="@+id/btn_check"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:fontFamily="@font/grotesk_bold"
                android:text="@string/explore"
...
